# cookiecutter-django

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .envrc  .eslintrc  .gitignore  .pre-commit-config.yaml  .tool-versions  Dockerfile  README.md  docker-compose-build.yaml  docker-compose.yaml  pyproject.toml  requirements-dev.in  requirements.in  tasks.py
{{cookiecutter.project_slug}}/.github/workflows/: codeql-analysis.yaml  publish.yaml  pull_request.yaml  test.yaml  update-dependencies.yaml
{{cookiecutter.project_slug}}/contrib/server/: docker-compose.yml  update
{{cookiecutter.project_slug}}/docker/: run.sh  uwsgi.ini
{{cookiecutter.project_slug}}/envs/: docker-local-envs.env  local-envs.env  test-envs.env
{{cookiecutter.project_slug}}/src/: conftest.py
{{cookiecutter.project_slug}}/src/common/: forms.py  models.py  views.py
{{cookiecutter.project_slug}}/src/common/migrations/: 0001_initial.py
{{cookiecutter.project_slug}}/src/common/templates/common/: base.html  footer.html  hello-random.html
{{cookiecutter.project_slug}}/src/common/templates/django_registration/: activation_complete.html  activation_email_body.txt  activation_email_subject.txt  activation_failed.html  registration_closed.html  registration_complete.html  registration_form.html
{{cookiecutter.project_slug}}/src/common/tests/: test_admin.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: context_processors.py  middleware.py  settings.py  urls.py  wsgi.py
